--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -15,7 +15,7 @@
 
 			<% end %>
 		</ul>
-		<table style="float: right; margin-right: 50%;">
+		<table>
 			<thead>
 				<tr>
 					<th>Longitude</th>
